--- a/src/orc/templates/demo.html
+++ b/src/orc/templates/demo.html
@@ -9,26 +9,16 @@
 <article class="content">
     <img class="demo__logo-img" src="{% static 'img/maykinmedia_logo.png' %}">
 
-    <h1 class="demo__title">It worked!</h1>
+    <h1 class="demo__title">Overigedataregistratiecomponent</h1>
 
-    <h2>Congratulations on installing the Maykin Media default project for
-        <strong>defaulttest</strong>.
-    </h2>
+    <ul>
+        <li>
+            <a href="{% url 'admin:index' %}">admin</a>
+        </li>
+        <li>
+            <a href="{% url 'schema-redoc' version=1 %}">API spec</a>
+        </li>
+    </ul>
 
-    <section>
-        <p>
-            Of course, you haven't actually done any work yet. Next, start your first app by running <code>python
-            manage.py startapp [app_label]</code>.
-        </p>
-
-        <p>
-            You can also checkout the <a href="{% url 'admin:index' %}">admin</a>.
-        </p>
-    </section>
-
-    <p>
-        You're seeing this message because you have <code>DEBUG = True</code> in your Django settings file and you
-        haven't configured any URLs. Get to work!
-    </p>
 </article>
 {% endblock %}
